--- a/movieCatalog/Podfile
+++ b/movieCatalog/Podfile
@@ -11,4 +11,6 @@ target 'movieCatalog' do
   pod 'Alamofire', '~> 4.4'
   pod 'Cache'
   pod 'Imaginary'
+  pod 'youtube-ios-player-helper'
+  
 end
